<resources>
    <string name="app_name">RevenueCat Notifier</string>
    <string name="api_url" translatable="false">https://fadfadah.net/ksu-gpa/getRevenueCatInformation</string>
    <string name="shared_preferences_name" translatable="false">revenue_cat_shared_preferences</string>
    <string name="other_language">عربي</string>
    <string name="login">Log in</string>
    <string name="login_warning">This is not an official revenue cat product instead, web scraping is used to collect the data</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_loading">Please wait until we finish gathering data</string>
    <string name="login_error_empty_fields">Please fill email and password</string>

    <string name="logout">Logout</string>
    <string name="trails">Trails</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="mrr">MRR</string>
    <string name="revenue">Revenue</string>
    <string name="active_users">Active Users</string>
    <string name="installs">Installs</string>
    <string name="transactions">Transactions</string>
    <string name="load_more">See More</string>
</resources>