<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home_header_section"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/revenue_cat_logo"
                tools:ignore="ContentDescription" />

            <include layout="@layout/stats_section" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_transactions_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_header"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions"
                android:textColor="#888888"
                android:textSize="20dp"
                android:theme="@style/SemiBold" />

            <View
                android:layout_width="50dp"
                android:layout_height="1.5dp"
                android:layout_marginTop="6dp"
                android:background="#888888" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_transactions_section_title"
            android:paddingBottom="40dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <androidx.cardview.widget.CardView
            android:onClick="seeMoreTransactions"
            android:id="@+id/button_see_more"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/recycler_view_transactions"
            android:outlineSpotShadowColor="#737373"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="-60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="13dp">
            <TextView
                android:id="@+id/text_load_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/load_more"
                android:textSize="16dp"
                android:theme="@style/Regular" />
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_see_more"
            android:layout_alignParentBottom="true"
            android:background="#F4F4F4"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/logout"
                android:theme="@style/Regular" />

            <TextView
                android:id="@+id/text_last_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:theme="@style/Regular" />

            <TextView
                android:id="@+id/button_home_switch_langauge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/other_language"
                android:theme="@style/Regular" />
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>