<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_trails_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/trails"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_trails_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_subscriptions_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/subscriptions"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_subscriptions_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_mrr_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/mrr"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_mrr_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_revenue_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/revenue"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_revenue_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_installs_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/installs"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_installs_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_state_card_header">

                    <TextView
                        android:id="@+id/text_stats_active_users_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/active_users"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:theme="@style/SemiBold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_state_card_body">

                    <TextView
                        android:id="@+id/text_stats_active_users_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:gravity="center"
                        android:text="2.14$"
                        android:textColor="#868686"
                        android:textSize="19dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</merge>